# do-it

./: Cargo.toml  LICENSE  README.md  WARP.md  todo.md
.do-it/data/: todo
.github/workflows/: release.yml
cli/: Cargo.toml
cli/src/: main.rs  match.rs
data/src/: archive.rs  lesson.rs  lib.rs  todo.rs
domain/: Cargo.toml
domain/src/: lib.rs
domain/src/archive/: add.rs  delete.rs  mod.rs  search.rs
domain/src/lessons/: add.rs  delete.rs  mod.rs  search.rs
domain/src/todo/: add.rs  check.rs  delete.rs  list.rs  mod.rs  search.rs
shared/src/: archive.rs  lesson.rs  lib.rs  todo.rs
ui/: Cargo.toml
ui/src/: archive.rs  lesson.rs  lib.rs  todo.rs
